classDiagram
direction BT
class Person {
  + Person(String, String, String) 
  ~ String lastname
  ~ String name
  ~ String phone
  + equals(Object) boolean
  + getLastname() String
  + getName() String
  + getPhone() String
  + hashCode() int
  + setLastname(String) void
  + setName(String) void
  + setPhone(String) void
  + toString() String
}
class PhoneBook {
<<Interface>>
  + addPerson(Person) void
  + removePerson(Person) void
  + searchByLastname(String) Person
  + searchByName(String) Person
  + searchByNumber(String) Person
}
class PhoneBookArray {
  + PhoneBookArray() 
  + int MAX_PERSONS
  ~ Person[] phoneBook
  + addPerson(Person) void
  + removePerson(Person) void
  + searchByLastname(String) Person
  + searchByName(String) Person
  + searchByNumber(String) Person
}
class PhoneBookList {
  + PhoneBookList() 
  + int MAX_PERSONS
  ~ ArrayList~Person~ phoneBook
  + addPerson(Person) void
  + removePerson(Person) void
  + searchByLastname(String) Person
  + searchByName(String) Person
  + searchByNumber(String) Person
}

PhoneBookArray  ..>  PhoneBook 
PhoneBookList  ..>  PhoneBook 
